--- a/subgraphs/masterchef-v3/subgraph.yaml
+++ b/subgraphs/masterchef-v3/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: MasterChefV3
-    network: chapel
+    network: mainnet
     source:
-      address: "0x4c650fb471fe4e0f476fd3437c3411b1122c4e3b"
+      address: "0x556b9306565093c855aea9ae92a594704c2cd59e"
       abi: MasterChefV3
-      startBlock: 28492774
+      startBlock: 16945103
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
