--- a/subgraphs/exchange-v3/template/subgraph.template.yaml
+++ b/subgraphs/exchange-v3/template/subgraph.template.yaml
@@ -100,7 +100,7 @@ templates:
           handler: handleBurn
         - event: Flash(indexed address,indexed address,uint256,uint256,uint256,uint256)
           handler: handleFlash
-        # - event: Collect(indexed address,address,indexed int24,indexed int24,uint128,uint128)
-        #   handler: handleCollect
+        - event: Collect(indexed address,address,indexed int24,indexed int24,uint128,uint128)
+          handler: handleCollect
         - event: CollectProtocol(indexed address,indexed address,uint128,uint128)
           handler: handleCollectProtocol
