--- a/subgraphs/cake-pool/subgraph.yaml
+++ b/subgraphs/cake-pool/subgraph.yaml
@@ -3,6 +3,9 @@ description: Binance Smart Chain Blocks
 repository: https://github.com/pancakeswap
 schema:
   file: ./schema.graphql
+graft:
+  base: QmYZw6goye3YN5rKDiYi3F1MDmcjArcAgjgaZNhv8zpPjP
+  block: 27333808
 dataSources:
   - kind: ethereum/contract
     name: CakePool
@@ -10,7 +13,7 @@ dataSources:
     source:
       address: '0x45c54210128a065de780C4B0Df3d16664f7f859e'
       abi: CakePool
-      startBlock: 17250470
+      startBlock: 27333808
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -22,8 +25,6 @@ dataSources:
         - name: CakePool
           file: ./abis/CakePool.json
       eventHandlers:
-        - event: Deposit(indexed address,uint256,uint256,uint256,uint256)
-          handler: handleDeposit
         - event: Lock(indexed address,uint256,uint256,uint256,uint256)
           handler: handleLock
         - event: Unlock(indexed address,uint256,uint256)
