--- a/subgraphs/user-position-v3/template/subgraph.yaml
+++ b/subgraphs/user-position-v3/template/subgraph.yaml
@@ -8,11 +8,11 @@ features:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: {{ network }}
+    network: bsc
     source:
-      address: "{{v3.factoryAddress}}"
+      address: "0x0bfbcf9fa4f9c56b0f40a671ad40e0805a091865"
       abi: Factory
-      startBlock: {{ v3.startBlock }}
+      startBlock: 26956207
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -37,11 +37,11 @@ dataSources:
           handler: handlePoolCreated
   - kind: ethereum/contract
     name: NonfungiblePositionManager
-    network: {{network}}
+    network: bsc
     source:
-      address: "{{v3.nonfungiblePositionManagerAddress}}"
+      address: "0x46a15b0b27311cedf172ab29e4f4766fbe7f4364"
       abi: NonfungiblePositionManager
-      startBlock: {{ v3.nonfungiblePositionManagerStartBlock }}
+      startBlock: 26931961
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -69,7 +69,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pool
-    network: {{ network }}
+    network: bsc
     source:
       abi: Pool
     mapping:
