--- a/subgraphs/affiliate-program/subgraph.yaml
+++ b/subgraphs/affiliate-program/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: AffiliateProgram
-    network: goerli
+    network: bsc
     source:
-      address: "0x3AEF535b5FFB0395531E88Ea7F50472E345b9a11"
+      address: "0x92C73D90F709DFf7e5E7307e8F2EE20e39396b12"
       abi: AffiliateProgram
-      startBlock: 9011366
+      startBlock: 28916072
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.2
