--- a/subgraphs/exchange-v2/subgraph.yaml
+++ b/subgraphs/exchange-v2/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: arbitrum-goerli
+    network: polygon-zkevm
     source:
-      address: "0x333eae459075b1d7de8eb57997b5d4eee5f1070a"
+      address: "0x02a84c1b3bbd7401a5f7fa98a384ebc70bb5749e"
       abi: Factory
-      startBlock: 22109729
+      startBlock: 749593
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -34,7 +34,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pair
-    network: arbitrum-goerli
+    network: polygon-zkevm
     source:
       abi: Pair
     mapping:
