--- a/subgraphs/linked-pool/subgraph.yaml
+++ b/subgraphs/linked-pool/subgraph.yaml
@@ -1,16 +1,21 @@
 specVersion: 0.0.2
-description: Goerli Smart Chain Blocks
+description: Mainnet Smart Chain Blocks
 repository: https://github.com/pancakeswap
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: PancakeSwapMMPool
-    network: goerli
+#    network: mainnet
+#    source:
+#      address: '0x9Ca2A439810524250E543BA8fB6E88578aF242BC'
+#      abi: PancakeSwapMMPool
+#      startBlock: 16568654
+    network: bsc
     source:
-      address: '0x9Ca2A439810524250E543BA8fB6E88578aF242BC'
+      address: '0xfEACb05b373f1A08E68235bA7FC92636b92ced01'
       abi: PancakeSwapMMPool
-      startBlock: 8122680
+      startBlock: 25949098
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
