fix: Polygon zkevm v2 stable pairs address

--- a/subgraphs/exchange-v2/package.json
+++ b/subgraphs/exchange-v2/package.json
@@ -10,6 +10,7 @@
     "auth": "graph auth --product hosted-service SUBGRAPH_ACCESS_TOKEN",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "deploy": "graph deploy --product hosted-service pancakeswap/exhange-eth"
+    "deploy": "graph deploy --product hosted-service pancakeswap/exhange-eth",
+    "deploy:polygon-zkevm": "graph deploy --studio exchange-v2-polygon-zkevm"
   }
 }
