--- a/subgraphs/exchange-v3/template/subgraph.yaml
+++ b/subgraphs/exchange-v3/template/subgraph.yaml
@@ -8,11 +8,11 @@ features:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: arbitrum-one
+    network: zkSync2-testnet
     source:
-      address: "0x0bfbcf9fa4f9c56b0f40a671ad40e0805a091865"
+      address: "0x48e6bc3f2546e63908cd09b04e2b3f78e57b6292"
       abi: Factory
-      startBlock: 101028949
+      startBlock: 9053839
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -37,11 +37,11 @@ dataSources:
           handler: handlePoolCreated
   - kind: ethereum/contract
     name: NonfungiblePositionManager
-    network: arbitrum-one
+    network: zkSync2-testnet
     source:
-      address: "0x46a15b0b27311cedf172ab29e4f4766fbe7f4364"
+      address: "0xf84697cfe7c88f846e4ba5dae14a6a8f67def5c2"
       abi: NonfungiblePositionManager
-      startBlock: 101032520
+      startBlock: 9054587
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -71,7 +71,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pool
-    network: arbitrum-one
+    network: zkSync2-testnet
     source:
       abi: Pool
     mapping:
