--- a/subgraphs/exchange-v3/template/subgraph.yaml
+++ b/subgraphs/exchange-v3/template/subgraph.yaml
@@ -8,11 +8,11 @@ features:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: zkSync2-testnet
+    network: polygon-zkevm-testnet
     source:
-      address: "0x48e6bc3f2546e63908cd09b04e2b3f78e57b6292"
+      address: "0x2430dbd123bc40f8be6110065a448c1aa0619cb1"
       abi: Factory
-      startBlock: 9053839
+      startBlock: 776055
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -37,11 +37,11 @@ dataSources:
           handler: handlePoolCreated
   - kind: ethereum/contract
     name: NonfungiblePositionManager
-    network: zkSync2-testnet
+    network: polygon-zkevm-testnet
     source:
-      address: "0xf84697cfe7c88f846e4ba5dae14a6a8f67def5c2"
+      address: "0x1f489dd5b559e976ae74303f939cfd0af1b62c2b"
       abi: NonfungiblePositionManager
-      startBlock: 9054587
+      startBlock: 774445
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -71,7 +71,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pool
-    network: zkSync2-testnet
+    network: polygon-zkevm-testnet
     source:
       abi: Pool
     mapping:
