fix: fee function

--- a/subgraphs/exchange-v2/subgraph.yaml
+++ b/subgraphs/exchange-v2/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: polygon-zkevm-testnet
+    network: polygon-zkevm
     source:
-      address: "0xba40c83026213f9cbc79998752721a0312bdb74a"
+      address: "0x02a84c1b3bbd7401a5f7fa98a384ebc70bb5749e"
       abi: Factory
-      startBlock: 773605
+      startBlock: 749593
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -34,7 +34,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pair
-    network: polygon-zkevm-testnet
+    network: polygon-zkevm
     source:
       abi: Pair
     mapping:
