--- a/subgraphs/exchange-v3/template/subgraph.yaml
+++ b/subgraphs/exchange-v3/template/subgraph.yaml
@@ -8,11 +8,11 @@ features:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: zksync-era
+    network: arbitrum-one
     source:
-      address: "0x1bb72e0cbbea93c08f535fc7856e0338d7f7a8ab"
+      address: "0x0bfbcf9fa4f9c56b0f40a671ad40e0805a091865"
       abi: Factory
-      startBlock: 8639214
+      startBlock: 101028949
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -37,11 +37,11 @@ dataSources:
           handler: handlePoolCreated
   - kind: ethereum/contract
     name: NonfungiblePositionManager
-    network: zksync-era
+    network: arbitrum-one
     source:
-      address: "0xa815e2ed7f7d5b0c49fda367f249232a1b9d2883"
+      address: "0x46a15b0b27311cedf172ab29e4f4766fbe7f4364"
       abi: NonfungiblePositionManager
-      startBlock: 8640657
+      startBlock: 101032520
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -71,7 +71,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pool
-    network: zksync-era
+    network: arbitrum-one
     source:
       abi: Pool
     mapping:
