--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "lint": "eslint '*/**/*.{js,ts}'",
     "prepare": "husky install"
   },
+  "resolutions": {
+    "gluegun": "github:edgeandnode/gluegun#b34b9003d7bf556836da41b57ef36eb21570620a",
+    "assemblyscript": "github:AssemblyScript/assemblyscript#3ed76a97f05335504166fce1653da75f4face28f"
+  },
   "devDependencies": {
     "mustache": "^4.2.0",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@graphprotocol/graph-cli": "^0.21.0",
+    "@graphprotocol/graph-cli": "^0.20.3",
     "@graphprotocol/graph-ts": "^0.20.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
