--- a/subgraphs/exchange-v2/subgraph.yaml
+++ b/subgraphs/exchange-v2/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: base
+    network: opbnb-mainnet
     source:
       address: "0x02a84c1b3bbd7401a5f7fa98a384ebc70bb5749e"
       abi: Factory
-      startBlock: 2910387
+      startBlock: 1708914
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -34,7 +34,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pair
-    network: base
+    network: opbnb-mainnet
     source:
       abi: Pair
     mapping:
