--- a/subgraphs/exchange-v3/template/package.json
+++ b/subgraphs/exchange-v3/template/package.json
@@ -16,6 +16,7 @@
     "deploy:bsc": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange-v3-bsc subgraph.yaml",
     "deploy:zksync-goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/exchange-v3-zksync-goerli subgraph.yaml",
     "deploy:arb": "graph deploy --product hosted-service pancakeswap/exchange-v3-arb",
-    "deploy:polygon-zkevm-testnet": "graph deploy --studio exchange-v3-polygon-zkevm-test"
+    "deploy:polygon-zkevm-testnet": "graph deploy --studio exchange-v3-polygon-zkevm-test",
+    "deploy:opbnb": "graph deploy --node https://open-platform-ap.nodereal.io/$API_KEY/opbnb-mainnet-graph-indexer/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange-v3"
   }
 }
