--- a/subgraphs/blocks/subgraph.yaml
+++ b/subgraphs/blocks/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: BSCValidatorSet
     network: bsc
     source:
-      address: '0x0000000000000000000000000000000000001000'
+      address: "0x0000000000000000000000000000000000001000"
       abi: BSCValidatorSet
     mapping:
       kind: ethereum/events
