fix: Add support for MCv3 owner

--- a/subgraphs/user-position-v3/template/package.json
+++ b/subgraphs/user-position-v3/template/package.json
@@ -6,8 +6,7 @@
   "author": "PancakeSwap",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "template": "mustache ../../../config/bsc.js subgraph.template.yaml > subgraph.yaml",
-    "auth": "graph auth --product hosted-service f4b727b41dd3465f461ee000115b1102",
+    "template": "mustache ../../../config/$NETWORK.js subgraph.template.yaml > subgraph.yaml && mustache ../../../config/$NETWORK.js utils/constants.template.ts > utils/constants.ts",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
     "deploy:goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/user-position-v3-goerli subgraph.yaml",
