fix: Fix for bad pricing on wbtc-eth

--- a/subgraphs/exchange-v3/template/subgraph.template.yaml
+++ b/subgraphs/exchange-v3/template/subgraph.template.yaml
@@ -5,6 +5,10 @@ schema:
   file: ./schema.graphql
 features:
   - nonFatalErrors
+  - grafting
+graft:
+  base: QmXT8Dy3SWmutmEfseN9B6jbMcXJqCRL8vgaXsy79YyuBq
+  block: 18450861
 dataSources:
   - kind: ethereum/contract
     name: Factory
