--- a/subgraphs/exchange-stableswap/subgraph.yaml
+++ b/subgraphs/exchange-stableswap/subgraph.yaml
@@ -5,7 +5,7 @@ schema:
   file: ./schema.graphql
 graft:
   base: Qme4U6by9yqGwTPKRaPvbgo7Ar9CwYFaTjmy9z6uVSjxvL
-  block: 25535458 # for previous exiting factory
+  block: 34376850 # for previous exiting factory
 dataSources:
   - kind: ethereum/contract
     name: StableSwapFactory
@@ -30,6 +30,8 @@ dataSources:
           file: ./abis/Factory.json
         - name: Pair
           file: ./abis/Pair.json
+        - name: PairV3
+          file: ./abis/PairV3.json
         - name: ERC20
           file: ./abis/ERC20.json
         - name: ERC20NameBytes
