--- a/subgraphs/exchange-stableswap/subgraph.yaml
+++ b/subgraphs/exchange-stableswap/subgraph.yaml
@@ -5,7 +5,7 @@ schema:
   file: ./schema.graphql
 graft:
   base: Qme4U6by9yqGwTPKRaPvbgo7Ar9CwYFaTjmy9z6uVSjxvL
-  block: 25535458 # for previous exiting factory
+  block: 33890015 # for previous exiting factory
 dataSources:
   - kind: ethereum/contract
     name: StableSwapFactory
@@ -30,6 +30,8 @@ dataSources:
           file: ./abis/Factory.json
         - name: Pair
           file: ./abis/Pair.json
+        - name: PairV3
+          file: ./abis/PairV3.json
         - name: ERC20
           file: ./abis/ERC20.json
         - name: ERC20NameBytes
@@ -64,6 +66,8 @@ templates:
           file: ./abis/Factory.json
         - name: Pair
           file: ./abis/Pair.json
+        - name: PairV3
+          file: ./abis/PairV3.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[2],uint256[2],uint256,uint256)
           handler: handleAddLiquidity
@@ -97,6 +101,8 @@ templates:
           file: ./abis/Factory.json
         - name: Pair
           file: ./abis/Pair.json
+        - name: PairV3
+          file: ./abis/PairV3.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[2],uint256[2],uint256,uint256)
           handler: handleAddLiquidity
@@ -130,6 +136,8 @@ templates:
           file: ./abis/Factory.json
         - name: Pair
           file: ./abis/Pair.json
+        - name: PairV3
+          file: ./abis/PairV3.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[3],uint256[3],uint256,uint256)
           handler: handleTriAddLiquidity
