feat: Add v2 prediction subgraph for arbitrum one

--- a/subgraphs/prediction/v2-generic/package.json
+++ b/subgraphs/prediction/v2-generic/package.json
@@ -6,10 +6,12 @@
   "author": "PancakeSwap",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "template": "mustache ../../../config/arbitrum-goerli.js subgraph.template.yaml > subgraph.yaml",
+    "template": "mustache ../../config/$NETWORK.js subgraph.template.yaml > subgraph.yaml && mustache ../../config/$NETWORK.js mappings/utils/index.template.ts > mappings/utils/index.ts && mustache ../../config/$NETWORK.js mappings/pricing.template.ts > mappings/pricing.ts",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
     "deploy:bsc": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-cannoli/playground-subgraph subgraph.yaml",
-    "deploy:arbitrum-goerli": "graph deploy --product hosted-service chef-cannoli/prediction-v2-arbitrum-goerli"
+    "deploy:arbitrum-goerli": "graph deploy --product hosted-service chef-cannoli/prediction-v2-arbitrum-goerli",
+    "deploy:arbitrum-one": "graph deploy --product hosted-service chef-cannoli/prediction-v2-arbitrum-one",
+    "deploy:zksync-era": "graph deploy --studio prediction-v2-zksync-era"
   }
 }
