--- a/subgraphs/prediction/v2-generic/package.json
+++ b/subgraphs/prediction/v2-generic/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "prediction-v2",
+  "name": "prediction-v2-generic",
   "description": "PancakeSwap Subgraph",
   "version": "1.0.0",
   "repository": "git@github.com:pancakeswap/pancake-subgraph.git",
   "author": "PancakeSwap",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "template": "mustache ../../config/$NETWORK.js subgraph.template.yaml > subgraph.yaml && mustache ../../config/$NETWORK.js mappings/utils/index.template.ts > mappings/utils/index.ts && mustache ../../config/$NETWORK.js mappings/pricing.template.ts > mappings/pricing.ts",
+    "template": "mustache ../../../config/$NETWORK.js subgraph.template.yaml > subgraph.yaml",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
     "deploy:bsc": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-cannoli/playground-subgraph subgraph.yaml",
-    "deploy:arbitrum-goerli": "graph deploy --product hosted-service chef-cannoli/prediction-v2-arbitrum-goerli",
-    "deploy:arbitrum-one": "graph deploy --product hosted-service chef-cannoli/prediction-v2-arbitrum-one",
+    "deploy:arbitrum-goerli": "graph deploy --product hosted-service pancakeswap/prediction-v2-arbitrum-goreli",
+    "deploy:arbitrum": "graph deploy --product hosted-service pancakeswap/prediction-v2-arbitrum",
     "deploy:zksync-era": "graph deploy --studio prediction-v2-zksync-era"
   }
 }
