--- a/subgraphs/prediction/v2-generic/package.json
+++ b/subgraphs/prediction/v2-generic/package.json
@@ -9,9 +9,9 @@
     "template": "mustache ../../../config/$NETWORK.js subgraph.template.yaml > subgraph.yaml",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "deploy:bsc": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-cannoli/playground-subgraph subgraph.yaml",
+    "deploy:bsc": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ subgraph.yaml",
     "deploy:arbitrum-goerli": "graph deploy --product hosted-service pancakeswap/prediction-v2-arbitrum-goreli",
-    "deploy:arbitrum": "graph deploy --product hosted-service pancakeswap/prediction-v2-arbitrum",
+    "deploy:arbitrum": "graph deploy --product hosted-service pancakeswap/prediction-v2-arbitrum-WBTC",
     "deploy:zksync-era": "graph deploy --studio prediction-v2-zksync-era"
   }
 }
