--- a/subgraphs/exchange-v3/lite/package.json
+++ b/subgraphs/exchange-v3/lite/package.json
@@ -1,15 +1,16 @@
 {
   "name": "exchange-v3-lite",
-  "description": "PancakeSwap Subgraph for Exchange V3 lite version",
+  "description": "SectaFi Subgraph for Exchange V3 lite version",
   "version": "1.0.0",
-  "repository": "git@github.com:pancakeswap/pancake-subgraph.git",
-  "author": "PancakeSwap",
+  "repository": "git@github.com:secta-finance/secta-subgraph.git",
+  "author": "SectaFi",
   "license": "GPL-3.0-or-later",
   "scripts": {
     "template": "mustache ../../../config/$NETWORK.js subgraph.template.yaml > subgraph.yaml && mustache ../../../config/$NETWORK.js utils/constants.template.ts > utils/constants.ts && mustache ../../../config/$NETWORK.js utils/pricing.template.ts > utils/pricing.ts",
     "auth": "graph auth --product hosted-service SUBGRAPH_KEY",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/exchange-v3-lite subgraph.yaml"
+    "deploy": "graph deploy --node https://graph-deploy.goerli.linea.build --ipfs https://graph-ipfs.goerli.linea.build sectafi/dex-lite-goerli subgraph.yaml",
+    "pdeploy": "graph deploy --node https://graph-deploy.linea.build --ipfs https://graph-ipfs.linea.build sectafi/dex-lite subgraph.yaml"
   }
 }
