--- a/subgraphs/exchange-v3/lite/subgraph.yaml
+++ b/subgraphs/exchange-v3/lite/subgraph.yaml
@@ -8,11 +8,11 @@ features:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: bsc
+    network: linea-goerli
     source:
-      address: "0x0bfbcf9fa4f9c56b0f40a671ad40e0805a091865"
+      address: "0xBf762932d4f27E84B244f75Bb225ecDd89D7C698"
       abi: Factory
-      startBlock: 26956207
+      startBlock: 3250084
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -37,11 +37,11 @@ dataSources:
           handler: handlePoolCreated
   - kind: ethereum/contract
     name: NonfungiblePositionManager
-    network: bsc
+    network: linea-goerli
     source:
-      address: "0x46a15b0b27311cedf172ab29e4f4766fbe7f4364"
+      address: "0x15712764e69Abe66934c2a05ef0a40fBb73EF63C"
       abi: NonfungiblePositionManager
-      startBlock: 26931961
+      startBlock: 3250084
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
