--- a/subgraphs/exchange-stableswap/bsc/subgraph.yaml
+++ b/subgraphs/exchange-stableswap/bsc/subgraph.yaml
@@ -73,6 +73,8 @@ templates:
           file: ./abis/Pair.json
         - name: PairV3
           file: ./abis/PairV3.json
+        - name: PriceLens0
+          file: ./abis/PriceLens0.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[2],uint256[2],uint256,uint256)
           handler: handleAddLiquidity
@@ -108,6 +110,8 @@ templates:
           file: ./abis/Pair.json
         - name: PairV3
           file: ./abis/PairV3.json
+        - name: PriceLens0
+          file: ./abis/PriceLens0.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[2],uint256[2],uint256,uint256)
           handler: handleAddLiquidity
@@ -143,6 +147,8 @@ templates:
           file: ./abis/Pair.json
         - name: PairV3
           file: ./abis/PairV3.json
+        - name: PriceLens0
+          file: ./abis/PriceLens0.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[3],uint256[3],uint256,uint256)
           handler: handleTriAddLiquidity
