--- a/subgraphs/exchange-stableswap/bsc/subgraph.yaml
+++ b/subgraphs/exchange-stableswap/bsc/subgraph.yaml
@@ -3,15 +3,18 @@ description: PancakeSwap is a decentralized protocol for automated token exchang
 repository: https://github.com/pancakeswap
 schema:
   file: ./schema.graphql
+# graft:
+#   base: Qme4U6by9yqGwTPKRaPvbgo7Ar9CwYFaTjmy9z6uVSjxvL
+#   block: 33890015 # for previous exiting factory
 graft:
-  base: Qme4U6by9yqGwTPKRaPvbgo7Ar9CwYFaTjmy9z6uVSjxvL
-  block: 33890015 # for previous exiting factory
+  base: QmXYctSeyF2dMi6Cmkb4t83BMn1RJcENkVSkAgsTTXFAC4
+  block: 35922202 # for previous exiting factory
 dataSources:
   - kind: ethereum/contract
     name: StableSwapFactory
     network: bsc
     source:
-      address: '0x25a55f9f2279A54951133D503490342b50E5cd15'
+      address: "0x25a55f9f2279A54951133D503490342b50E5cd15"
       abi: StableSwapFactory
       startBlock: 25535458
     mapping:
@@ -38,6 +41,8 @@ dataSources:
           file: ./abis/ERC20NameBytes.json
         - name: ERC20SymbolBytes
           file: ./abis/ERC20SymbolBytes.json
+        - name: PriceLens0
+          file: ./abis/PriceLens0.json
       eventHandlers:
         - event: NewStableSwapPair(indexed address,address,address,address,address)
           handler: handlePairCreated
@@ -68,6 +73,8 @@ templates:
           file: ./abis/Pair.json
         - name: PairV3
           file: ./abis/PairV3.json
+        - name: PriceLens0
+          file: ./abis/PriceLens0.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[2],uint256[2],uint256,uint256)
           handler: handleAddLiquidity
@@ -103,6 +110,8 @@ templates:
           file: ./abis/Pair.json
         - name: PairV3
           file: ./abis/PairV3.json
+        - name: PriceLens0
+          file: ./abis/PriceLens0.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[2],uint256[2],uint256,uint256)
           handler: handleAddLiquidity
@@ -138,6 +147,8 @@ templates:
           file: ./abis/Pair.json
         - name: PairV3
           file: ./abis/PairV3.json
+        - name: PriceLens0
+          file: ./abis/PriceLens0.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[3],uint256[3],uint256,uint256)
           handler: handleTriAddLiquidity
